# HCMUS-Game

./: .gitignore  AI_Implementation_Summary.md  CMakeLists.txt  DESIGN_PATTERNS.md  ENHANCED_FEATURES.md  Game.spec  MODERN_UI_UPGRADE.md  PLAN.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  README.md  Slide.md  build.bat  high_score.json  main.cpp  main.py  run_game.bat  run_game.sh  settings.json  setup.bat  setup.py  setup.sh  test_game.py  test_ui.py  visual_test.py
AI/: AI_LOG.md  DEVELOPMENT_NOTES.md  GAME_GUIDE.md  SCALING_ANALYSIS.md
docs/: AI_COLLABORATION_LOG.md  AI_LOG.md  DEVELOPMENT_NOTES.md  GAME_GUIDE.md  LANGUAGE_ANALYSIS.md  OOP_ANALYSIS.md  PLAN.md  PROJECT_SUMMARY.md  README.md  SCALING_ANALYSIS.md  UML_DIAGRAMS.md  prompt.md
docs/AI/: AI_Implementation_Summary.md  AI_LOG.md  DEVELOPMENT_NOTES.md  GAME_GUIDE.md
game/: __init__.py
game/core/: __init__.py  game_engine.py
game/entities/: __init__.py  game_object.py  obstacle.py  player.py  player.py.backup
game/patterns/: __init__.py  factory.py  observer.py
game/utils/: display.py  input_handler.py
include/: Enemy.h  Game.h  Obstacle.h  Player.h  Utils.h
scenes/: __init__.py  background.py  dino.py  game_object.py  game_over.py  hud.py  main_game.py  obstacles.py  path_utils.py  tokens.py
src/: Enemy.cpp  Game.cpp  Obstacle.cpp  Player.cpp  Utils.cpp
